# access-card-manager

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker_entrypoint.sh  main.cpp
src/: cardentry.cpp  cardentry.h  main.cpp  mainview.cpp  mainview.h
static/: resources
